--- a/iocs/motorSimIOC/iocBoot/iocMotorSim/Makefile
+++ b/iocs/motorSimIOC/iocBoot/iocMotorSim/Makefile
@@ -1,6 +1,6 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
-ARCH = linux-x86_64
+ARCH = rhel9-x86_64
 #ARCH = vxWorks-ppc32
 #ARCH = $(EPICS_HOST_ARCH)
 TARGETS = cdCommands
